优化spider；添加repair功能，将最新数据添加到本地文件

--- a/data/data-pool/bond.html
+++ b/data/data-pool/bond.html
@@ -1120,6 +1120,16 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107609">107609 龙江1704</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107610">107610 龙江1705</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107611">107611 龙江1706</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107612">107612 新疆1705</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107613">107613 新疆1706</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107614">107614 新疆1707</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107615">107615 新疆1708</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107616">107616 北京1701</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107617">107617 北京1702</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107618">107618 河北1704</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107619">107619 河北1705</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107620">107620 河北1706</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107621">107621 河北1707</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?109078">109078 地债1202</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?109080">109080 地债1204</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?109082">109082 地债1206</a></li>
@@ -2497,12 +2507,13 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112517">112517 17西航01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112518">112518 17TCL01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112519">112519 17物美01</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112520">112520 17金洲02</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112520">112520 17广发01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112521">112521 17昆仑01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112522">112522 17阳普S1</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112523">112523 17株国01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?112524">112524 17株国02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?118590">118590 16昆交02</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?B11014">B11014 17金洲02</a></li>
          </ul>
    </div>
    <div id="con-a-6" style="display:none">
@@ -4223,6 +4234,16 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140598">140598 17辽宁08</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140599">140599 17贵州03</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140600">140600 17贵州04</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140601">140601 17新疆05</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140602">140602 17新疆06</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140603">140603 17新疆07</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140604">140604 17新疆08</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140605">140605 17黑龙01</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140606">140606 17黑龙02</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140607">140607 17黑龙03</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140608">140608 17黑龙04</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140609">140609 17黑龙05</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140610">140610 17黑龙06</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140900">140900 16上海09</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140901">140901 16上海10</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?140902">140902 16上海11</a></li>
@@ -5243,7 +5264,6 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124601">124601 PR唐城债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124602">124602 14国网01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124603">124603 14国网02</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124604">124604 PR富阳02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124605">124605 PR温高01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124606">124606 PR菏泽债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124607">124607 PR津环城</a></li>
@@ -5513,7 +5533,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124887">124887 14盐城南</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124888">124888 14邹城债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124889">124889 14定国资</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124890">124890 14甘电投</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124890">124890 14甘电停</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124891">124891 14株高01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124892">124892 14株高02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124893">124893 14文登债</a></li>
@@ -6032,7 +6052,9 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127475">127475 17宿开发</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127478">127478 17新交投</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127479">127479 16瀚瑞01</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127480">127480 17陂城投</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127481">127481 17京投01</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127486">127486 17威高新</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127488">127488 17惠投债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?129807">129807 蓝田债券</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?129808">129808 陕西金花债</a></li>
