--- a/data/data-pool/stock.html
+++ b/data/data-pool/stock.html
@@ -3131,7 +3131,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb600963">600963 岳阳林纸</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb600965">600965 福成股份</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb600966">600966 博汇纸业</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb600967">600967 北方创业</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb600967">600967 内蒙一机</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb600969">600969 郴电国际</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb600970">600970 中材国际</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb600971">600971 恒源煤电</a></li>
@@ -3443,6 +3443,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb603320">603320 迪贝电气</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb603322">603322 超讯通信</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb603323">603323 吴江银行</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb603326">603326 我乐家居</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb603328">603328 依顿电子</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb603330">603330 上海天洋</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?shmb603333">603333 明星电缆</a></li>
@@ -4784,7 +4785,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?01289">01289 盛力达科技</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?01290">01290 中国汇融</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?01292">01292 长安民生物流</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?01293">01293 宝信汽车</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?01293">01293 广汇宝信</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?01296">01296 国电科环</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?01297">01297 中国擎天软件</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?01298">01298 天美(控股)</a></li>
@@ -5260,7 +5261,6 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?02899">02899 紫金矿业</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?02935">02935 明丰珠宝(临时)</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?02951">02951 前进控股集团(临时)</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?02954">02954 新奥能源(临时)</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?02956">02956 中车时代电气(临时)</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?02959">02959 蓝鼎国际(临时)</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_mb_fulltext?02960">02960 裕华能源(临时)</a></li>
@@ -5607,7 +5607,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08205">08205 交大慧谷</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08206">08206 神通机器人教育</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08207">08207 中国信贷</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08211">08211 浙江永隆实业</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08211">08211 浙江永安</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08212">08212 誉满国际控股</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08213">08213 惟膳</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08215">08215 First Credit</a></li>
@@ -5695,7 +5695,6 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08331">08331 飞尚非金属</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08333">08333 阿仕特朗金融</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08335">08335 创徽国际</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08336">08336 电讯数码控股</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08337">08337 直通电讯</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08340">08340 域高金融</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08341">08341 艾硕控股</a></li>
@@ -5737,6 +5736,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08432">08432 太平洋酒吧</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08439">08439 新百利融资</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08442">08442 桦欣控股</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08452">08452 富银融资股份</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08455">08455 礼建德集团</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08578">08578 福泽集团(临时)</a></li>
          </ul>
